Fixed center alignment of some elements in IE

--- a/app/assets/styles/modules/m-project-detail.styl
+++ b/app/assets/styles/modules/m-project-detail.styl
@@ -403,4 +403,4 @@ $margin-bottom = $margin * 4
   veil()
 
   @media screen and (min-width: $screen-sm)
-    min-height rem(350px)
+    height rem(350px)
